# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2011  Vasco Nunes, Piotr Ożarowski


2011-01-14  Michael Jahn
	* [#687621] Remains previous cover
	* [#697029] Import dlg display error when previously x-ed out 

2011-01-13  Michael Jahn
	* KinoDe, IMDB-de, CineMovies and Zelluloid plugin updated

2011-01-10  Michael Jahn
	* fixed iPod export plugin in case of missing values
	* fixed deletion of the "created" value while updating a movie

2010-12-07  Piotr Ożarowski
	* Fix few spelling mistakes (thanks to Olivier BOURSIN)

2010-12-03  Michael Jahn
	* Zelluloid plugin updated

2010-11-23  Michael Jahn
	* added screenplay, cameraman and barcode to the search criteria combobox
	* sorted entries in the filter comboboxes of the main dialog

2010-11-16  Michael Jahn
	* added fields screenplay, cameraman, width, height and barcode to the html export plugin

---- 0.12.1 ----

2010-10-18  Piotr Ożarowski
	* Version changed to 0.12.1

2010-10-18  Michael Jahn
	* stabilized upgrade procedure for databases which are corrupt after an interuption of a previous upgrade procedure
	* enabled interactive search by number, title and original title in mainlist ("typeahead find")

2010-10-17  Michael Jahn
	* Allocine plugin updated
	* error fixed which prevents updates from pre-0.11 versions

2010-10-14  Michael Jahn
	* E-Pipoca plugin updated

2010-10-09  Michael Jahn
	* OFDb and IMDb plugin updated

2010-10-08  Piotr Ożarowski
	* Filmweb movie plugin updated (thanks to Mariusz Szczepanek)

2010-10-08  Michael Jahn
	* IMDb plugin updated

---- 0.12 ----

2010-10-03  Piotr Ożarowski
	* Update translations
	* Version changed to 0.12

2010-10-01  Michael Jahn
	* [#640219] Original title is not well raised by Allocine plugin

2010-09-30  Michael Jahn
	* saving the width of the columns of the mainlist
	* default filter operator changed from equals to contains

2010-09-29  Michael Jahn
	* added fields "created" and "updated" to movie entries

2010-09-25  Michael Jahn